Remove all Makefile.in
remove configure script

remove aclocal.m4

remove config.h.in

Update .gitignore

Update CI to run autoreconf --install.

Update REAMDE.md

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
       - run:
           name: Compile package
           command: |
+              autoreconf --install
               ./configure
               make -j 2
 
