Move nested_forward_lists header to fwdpp/util

--- a/fwdpp/ts/Makefile.am
+++ b/fwdpp/ts/Makefile.am
@@ -32,7 +32,6 @@ pkginclude_HEADERS= definitions.hpp \
 			mutation_tools.hpp \
 			visit_sites.hpp \
 			site_visitor.hpp \
-			recording.hpp \
-			nested_forward_lists.hpp
+			recording.hpp
 
 
