--- a/fwdpp/util/Makefile.am
+++ b/fwdpp/util/Makefile.am
@@ -3,6 +3,7 @@ pkgincludedir=$(prefix)/include/fwdpp/util
 pkginclude_HEADERS=abstract_cloneable.hpp \
 				   enum_bitflags.hpp \
 				   named_type.hpp \
-				   wrapped_range.hpp
+				   wrapped_range.hpp \
+			       nested_forward_lists.hpp 
 
 
