--- a/fwdpp/util/Makefile.am
+++ b/fwdpp/util/Makefile.am
@@ -4,6 +4,7 @@ pkginclude_HEADERS=abstract_cloneable.hpp \
 				   enum_bitflags.hpp \
 				   named_type.hpp \
 				   wrapped_range.hpp \
-			       nested_forward_lists.hpp 
+			       nested_forward_lists.hpp \
+				   validators.hpp
 
 
