--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           name: Install dependencies and set path
           command: |
             sudo apt-get update
-            sudo apt-get install libgsl0-dev libboost-*dev
+            sudo apt-get install libgsl0-dev libboost-*dev lcov
             # way to set path persistently https://circleci.com/docs/2.0/env-vars/#setting-path
             echo 'export PATH=/home/circleci/.local/bin:$PATH' >> $BASH_ENV
       - save_cache:
@@ -38,6 +38,11 @@ jobs:
           name: Run test suite
           command: |
               make check -j 2
+
+      - run:
+          name: Code coverage
+          command: |
+              make coverage-local
 
       - run:
           name: Build from make dist and run tests
