Make low-level tables structs templates.
* move low-level template types to namespace/directory ts/types

* move table_collection template from ::detail to ::types and update to use new low-level templates

* remove internal use of deprecated type names

--- a/configure.ac
+++ b/configure.ac
@@ -47,6 +47,7 @@ AC_CONFIG_FILES([Makefile fwdpp/version.hpp fwdpp/Makefile
                  fwdpp/ts/marginal_tree_functions/Makefile
                  fwdpp/ts/simplification/Makefile
                  fwdpp/ts/recording/Makefile
+                 fwdpp/ts/types/Makefile
 				 fwdpp/util/Makefile
 				 fwdpp/genetic_map/Makefile
 				 examples/Makefile testsuite/Makefile
