uncouple tree sequence from marginal_tree

--- a/fwdpp/ts/Makefile.am
+++ b/fwdpp/ts/Makefile.am
@@ -35,6 +35,6 @@ pkginclude_HEADERS= definitions.hpp \
 			visit_sites.hpp \
 			site_visitor.hpp \
 			recording.hpp \
-			tree_sequence_flags.hpp
+			tree_flags.hpp
 
 
